ActionSheet: fix bugs Gallery: added align feature colors: added new items Root: probably fix of blinking header

--- a/src/components/ActionSheet/ActionSheet.css
+++ b/src/components/ActionSheet/ActionSheet.css
@@ -7,6 +7,7 @@
   width: 100%;
   animation: animation-ios-actionsheet-intro .3s var(--ios-easing);
   padding: 10px;
+  box-sizing: border-box;
   }
 
   .ActionSheet--ios.ActionSheet--closing {
